add all video language support

--- a/popup.html
+++ b/popup.html
@@ -40,10 +40,30 @@
 <body>
     <div class="container">
         <div class="option-group">
-            <label for="language">Select Caption Language for Transliteration:</label>
-            <select id="language">
+            <label for="fromLanguage">Transliterate From:</label>
+            <select id="fromLanguage">
+                <!-- Options will be populated by popup.js -->
+            </select>
+        </div>
+
+        <div class="option-group">
+            <label for="toLanguage">Transliterate To:</label>
+            <select id="toLanguage">
+                <!-- Options will be populated by popup.js -->
+                <!-- Common languages for 'to' transliteration -->
+                <option value="en">English</option>
+                <option value="es">Spanish</option>
+                <option value="fr">French</option>
+                <option value="de">German</option>
                 <option value="hi">Hindi</option>
-                <option value="zh">Chinese</option>
+                <option value="zh-CN">Chinese (Simplified)</option> 
+                <option value="ja">Japanese</option>
+                <option value="ko">Korean</option>
+                <option value="ar">Arabic</option>
+                <option value="ru">Russian</option>
+                <option value="pt">Portuguese</option>
+                <option value="it">Italian</option>
+                <!-- Add more major languages as needed -->
             </select>
         </div>
 
